--- a/furble.css
+++ b/furble.css
@@ -116,3 +116,5 @@ progress { width: 100%; display:none}
 section { display: none}
 
 section.current { display: block }
+
+#actions input[type=number] { width: 2em }
